--- a/chat/package.json
+++ b/chat/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.12",
+    "axios": "^0.27.2",
     "socket.io-client": "^4.5.2",
+    "vant": "^3.6.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
-    "vite": "^3.1.0"
+    "less": "^4.1.3",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.7",
+    "vite": "^3.1.0",
+    "vite-plugin-pages": "^0.26.0"
   }
 }
