--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.2",
+    "morgan-body": "^2.6.8",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
-  }
+  },
+  "type": "module"
 }
