feat: bus(mitt)

--- a/chat/package.json
+++ b/chat/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^3.2.12",
     "axios": "^0.27.2",
+    "mitt": "^3.0.0",
     "socket.io-client": "^4.5.2",
     "vant": "^3.6.3",
     "vue": "^3.2.37",
