--- a/chat/.env
+++ b/chat/.env
@@ -1,2 +1,3 @@
-NAME_SPACE = CHAT
-API_URL = http://localhost:6001
+VITE_PK_NAME = 'ichat'
+VITE_API_URL = 'http://localhost:6001'
+VITE_WS_URL = 'ws://localhost:6001'
