--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
+# PORT
 PORT = 6001
-
-MONGODB_LOCAL = mongodb://localhost:27017/admin
-MONGODB_NAME = admin
-MONGODB_PASSWORD = 123456
+# JWT_SECRET
+JWT_SECRET = 'bGR4OTY='
