--- a/chat/package.json
+++ b/chat/package.json
@@ -13,6 +13,7 @@
     "@dicebear/avatars-initials-sprites": "^4.10.5",
     "ant-design-vue": "^3.2.12",
     "axios": "^0.27.2",
+    "fastclick": "^1.0.6",
     "mitt": "^3.0.0",
     "pinia": "^2.0.23",
     "socket.io-client": "^4.5.2",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
     "less": "^4.1.3",
+    "postcss-pxtorem": "^6.0.0",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
     "vite": "^3.1.0",
