--- a/server/.env.development
+++ b/server/.env.development
@@ -1,3 +1,1 @@
-MONGODB_LOCAL = mongodb://localhost:27017/admin
-MONGODB_NAME = admin
-MONGODB_PASSWORD = 123456
+MONGODB_URL= mongodb://localhost:27017/admin
