--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "morgan-body": "^2.6.8",
-    "nodemon": "^2.0.19",
-    "socket.io": "^4.5.3"
+    "nodemon": "^2.0.19"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
