--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
@@ -18,7 +19,6 @@
     "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
-    "morgan-body": "^2.6.8",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
